# yt-semantic-search

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_frontend.py
app/: cli.py  config.py  frontend.py  logging.py  main.py
app/chunking/: chunk.py
app/embedding/: embed.py
app/services/: crud.py  protocols.py  search.py  video_processing.py
app/storage/: db.py  models.py  queries.py  repository.py
app/youtube/: data_loader.py  fetcher.py  transform.py  youtube_videos.json
assets/: demo.tape
tests/: __init__.py  conftest.py
tests/services/: __init__.py  test_crud.py  test_search.py  test_video_processing.py
